<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>AceGWT :: Demo</name>

    <artifactId>acegwt.demo</artifactId>
    <version>${project.version}</version>
    <packaging>war</packaging>

    <parent>
        <groupId>edu.ycp.cs.dh</groupId>
        <artifactId>acegwt.root</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.js</include>
                    <include>**/*.gwt.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.js</include>
                    <include>**/*.css</include>
                    <include>**/*.html</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgument>-Xlint:unchecked,deprecation,fallthrough,finally</compilerArgument>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${project.gwt.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <!-- Plugin configuration. There are many available options, see
                  gwt-maven-plugin documentation at codehaus.org -->
                <configuration>
                    <extra>${webappDirectory}</extra>
                    <style>pretty</style>
                    <runTarget>AceGWTDemo.html</runTarget>
                    <hostedWebapp>${webappDirectory}</hostedWebapp>
                    <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
                    <gen>${project.build.directory}/generated-sources/gen</gen>
                    <extraJvmArgs>-Xmx1024M -Xms1024m -XX:PermSize=128m -XX:MaxPermSize=512m</extraJvmArgs>
                    <!--<extraJvmArgs>-Xmx1024M -Xms128m -XX:PermSize=512m -XX:MaxPermSize=1024m</extraJvmArgs>-->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
